--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,42 +1,48 @@
-name: "Deploy to NuGet"
+name: Publish Nuget Package
 
 on:
   push:
     tags:
-    - 'v*'
-
-env:
-  PROJECT_PATH: 'src/Migrator/Migrator.csproj'
-  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
-  NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
-
+    - "v[0-9]+.[0-9]+.[0-9]+"
+    
+defaults:
+ run:
+  working-directory: ./src
+    
 jobs:
-  deploy:
-    name: 'Deploy'
-    runs-on: 'windows-latest'
-    steps:
-    - name: 'Checkout'
-      uses: actions/checkout@v2
+  build:
+    env:
+      BUILD_CONFIG: 'Release'
+      SOLUTION: 'CosmosDb.Migrator.sln'
 
-    - name: 'Install dotnet'
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    - name: Verify commit exists in origin/main
+      run: |
+        git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
+        git branch --remote --contains | grep origin/main
+        
+    - name: Set VERSION variable from tag
+      run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1.0.5
+
+    - name: Restore dependencies
+      run: nuget restore $SOLUTION
+
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: 6.0.x
 
-    - name: 'Restore packages'
-      run: dotnet restore ${{ env.PROJECT_PATH }}
-
-    - name: 'Build project'
-      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
-
-    - name: 'Get Version'
-      id: version
-      uses: battila7/get-version-action@v2
-
-    - name: 'Pack project'
-      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
-
-    - name: 'Push package'
-      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -k ${{ env.NUGET_AUTH_TOKEN }} -s ${{ env.NUGET_SOURCE_URL }}
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
+    - name: Build
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+      
+    - name: Publish
+      run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_AUTH_TOKEN}} -SkipDuplicate
