--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -10,7 +10,7 @@ defaults:
   working-directory: ./src
     
 jobs:
-  build:
+  publish:
     env:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'CosmosDb.Migrator.sln'
@@ -21,6 +21,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: 'Install dotnet'
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
       
     - name: Verify commit exists in origin/main
       run: |
