--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -6,7 +6,7 @@ on:
     - "v*"
 
 env:
-  PROJECT_PATH: 'src/Migrator/Migrator.csproj'
+  PROJECT_PATH: 'Migrator/Migrator.csproj'
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
     
