--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -53,4 +53,6 @@ jobs:
       run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ env.VERSION }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
     
     - name: Publish
-      run: nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -Source '${{ env.NUGET_SOURCE_URL }}' -ApiKey ${{secrets.NUGET_AUTH_TOKEN}} -SkipDuplicate
+      run: nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -Source '${{ env.NUGET_SOURCE_URL }}' -ApiKey ${{env.NUGET_AUTH_TOKEN}} -SkipDuplicate
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
