--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -56,4 +56,4 @@ jobs:
       run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ env.VERSION }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
     
     - name: Publish
-      run: nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg -Source '${{ env.NUGET_SOURCE_URL }}' -ApiKey ${{ secrets.NUGET_KEY }} -SkipDuplicate
+      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg --source '${{ env.NUGET_SOURCE_URL }}' --api-key ${{ secrets.NUGET_KEY }} -SkipDuplicate
