--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -9,7 +9,6 @@ env:
   PROJECT_PATH: 'Migrator/Migrator.csproj'
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}/output
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
-  NUGET_KEY: ${{ secrets.NUGET_KEY }}
     
 defaults:
  run:
@@ -57,3 +56,5 @@ jobs:
     
     - name: Publish
       run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg --source '${{ env.NUGET_SOURCE_URL }}' --api-key ${{ env.NUGET_KEY }} --skip-duplicate
+      env: 
+        NUGET_KEY: ${{ secrets.NUGET_KEY }}
