--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,26 @@
 name: CI
+
 on:
   pull_request:
     branches: [ "main" ]
-
+    
 defaults:
  run:
   working-directory: ./src
-
+    
 jobs:
-  build:
+  publish:
     env:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'CosmosDb.Migrator.sln'
 
     runs-on: windows-latest
-
+    timeout-minutes: 15
+    
     steps:
     - name: Start CosmosDb Emulator
       uses: southpolesteve/cosmos-emulator-github-action@v1
-    
+
     - name: Checkout
       uses: actions/checkout@v2
 
@@ -26,6 +28,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x'
+      
+    - name: Setup NuGet
+      uses: nuget/setup-nuget@v1
+      with:
+        nuget-version: '5.x'
 
     - name: Restore dependencies
       run: nuget restore $SOLUTION
