--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
         nuget-version: '5.x'
 
     - name: Restore dependencies
-      run: nuget restore $SOLUTION
+      run: nuget restore ${{ env.SOLUTION }}
 
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+      run: dotnet build ${{ env.SOLUTION }} --configuration ${{ env.BUILD_CONFIG }} --no-restore
 
     - name: Run tests
-      run: dotnet test /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal
+      run: dotnet test /p:Configuration=${{ env.BUILD_CONFIG }} --no-restore --no-build --verbosity normal
