--- a/src/Migrator.IntegrationTests/Migrator.IntegrationTests.csproj
+++ b/src/Migrator.IntegrationTests/Migrator.IntegrationTests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Migrator.Tests.Shared\Migrator.Tests.Shared.csproj" />
       <ProjectReference Include="..\Migrator\Migrator.csproj" />
     </ItemGroup>
 
