--- a/src/Migrator.UnitTests/Migrator.UnitTests.csproj
+++ b/src/Migrator.UnitTests/Migrator.UnitTests.csproj
@@ -26,6 +26,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Migrator.Tests.Shared\Migrator.Tests.Shared.csproj" />
       <ProjectReference Include="..\Migrator\Migrator.csproj" />
     </ItemGroup>
 
